name:                fontrnd
version:             0.1.0.0
description:         fontrnd
author:              siers
maintainer:          wimuan@gmail.com
copyright:           Copyleft
build-type:          Simple
cabal-version:       >=1.20

executable fontrnd
  hs-source-dirs:      .

  main-is:             fontrnd.hs
  other-modules:       Fontrnd.Parser
  other-modules:       Fontrnd.Generate
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  build-depends:       base
                     , containers
                     , process
                     , random
                     , regex-base
                     , regex-tdfa
                     , split
                     , text
                     , vector
